--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -5,3 +5,20 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+
+img.vert-move {
+  -webkit-animation: mover 1.5s infinite  alternate;
+  animation: mover 1.5s infinite  alternate;
+}
+img.vert-move {
+  -webkit-animation: mover 1.5s infinite  alternate;
+  animation: mover 1.5s infinite  alternate;
+}
+@-webkit-keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-30px); }
+}
+@keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-30px); }
+}
