--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -1,56 +1,73 @@
-
-*{
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   font-family: sans-serif;
 }
 
-.loginBtn:hover{
+.loginBtn:hover {
   cursor: pointer;
 }
 
-.registerBtn:hover{
+.registerBtn:hover {
   cursor: pointer;
 }
 
-
 img.vert-move {
-  -webkit-animation: mover 1.5s infinite  alternate;
-  animation: mover 1.5s infinite  alternate;
+  -webkit-animation: mover 1.5s infinite alternate;
+  animation: mover 1.5s infinite alternate;
 }
 img.vert-move {
-  -webkit-animation: mover 1.5s infinite  alternate;
-  animation: mover 1.5s infinite  alternate;
+  -webkit-animation: mover 1.5s infinite alternate;
+  animation: mover 1.5s infinite alternate;
 }
 @-webkit-keyframes mover {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-30px); }
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-30px);
+  }
 }
 @keyframes mover {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-30px); }
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-30px);
+  }
 }
 
-@media (max-width: 1220px)  {
-  .animation{
+@media (max-width: 992px) {
+  .animation {
     display: none !important;
   }
-  .animation-img{
-    display: none !important;
-
-  }
-  .green-section{
+  .animation-img {
     display: none !important;
   }
-  .grid-main{
+  .green-section {
+    display: none !important;
+  }
+  .grid-main {
     display: grid;
-    grid-template-columns: "90% ,1fr" !important
+    grid-template-columns: repeat(1, 1fr) !important;
   }
-  .FormComponent{
-    width: 100% !important;
+  .leafImg {
+    display: none;
   }
-  .aboutImg{
+  .FormComponent {
+    width: 70% !important;
+  }
+}
+
+@media (max-width: 520px) {
+  .FormComponent {
+    width: 90% !important;
+  }
+}
+
+@media (max-width: 1220px) {
+  .aboutImg {
     display: none !important;
   }
 }
